--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -10,7 +10,7 @@
 }
 
 #nav > ul {
-  background-color: coral;
+  background-color: #1d1c32;
   min-width: var(--nav-width);
   position: absolute;
   top: 0;
@@ -30,6 +30,7 @@
 }
 
 #nav a {
+  color: #808080;
   text-decoration: none;
   border-radius: var(--border-radius);
   display: flex;
@@ -41,11 +42,84 @@
   font-size: var(--link-font-size);
 }
 
-#nav a:hover {
-  background-color: white;
+#nav .current-page {
+  background-color: #fd63ff;
+  color: #ffffff;
+}
+
+#nav .current-page svg,
+#nav .current-page svg path {
+  fill: #000000;
+}
+
+#nav a:hover:not(.current-page) {
+  background-color: #808080;
+  color: #ffffff;
   transition: var(--transition);
 }
 
-.current-page {
-  background-color: white;
+#nav a:hover:not(.current-page) svg,
+#nav a:hover:not(.current-page) svg path{
+  fill: #fd63ff;
+  transition: var(--transition);
+}
+
+#nav :where(:not(.current-page)) svg,
+#nav :where(:not(.current-page)) svg path {
+  fill: #808080;
+  transition: var(--transition);
+}
+
+#nav #home-link:hover svg,
+#nav #home-link:hover svg path {
+  fill: var(--bg-color);
+}
+
+#nav #trager-link:hover svg,
+#nav #trager-link:hover svg path {
+  fill: var(--trager-color);
+}
+
+#nav #massage-link:hover svg,
+#nav #massage-link:hover svg path {
+  fill: var(--massage-color);
+}
+
+#nav #kosmetik-link:hover svg,
+#nav #kosmetik-link:hover svg path {
+  fill: var(--kosmetik-color);
+}
+
+#nav #home-link.current-page svg,
+#nav #home-link.current-page svg path,
+#nav #massage-link.current-page svg,
+#nav #massage-link.current-page svg path,
+#nav #kosmetik-link.current-page svg,
+#nav #kosmetik-link.current-page svg path {
+  fill: #000000;
+}
+
+#nav #trager-link.current-page svg,
+#nav #trager-link.current-page svg path {
+  fill: #ffffff;
+}
+
+#nav #home-link.current-page {
+  color: #000000;
+}
+
+#nav #home-link.current-page {
+  background-color: var(--bg-color);
+}
+
+#nav #trager-link.current-page {
+  background-color: var(--trager-color);
+}
+
+#nav #massage-link.current-page {
+  background-color: var(--massage-color);
+}
+
+#nav #kosmetik-link.current-page {
+  background-color: var(--kosmetik-color);
 }
