--- a/app/views/trager/index.phtml
+++ b/app/views/trager/index.phtml
@@ -6,7 +6,7 @@
 
 <div class="flex">
 
-  <div class="cell">
+  <div id="trager" class="cell">
     <h2 class="h2 cell-title">Trager&reg;</h2>
     <h3 class="h3">Die Trager-Methode-eine Erfindung von Dr. Milton Trager</h3>
     <p>TRAGER&reg; nutzt leichte, sanfte, unaufdringliche Bewegungen, um tiefsitzende physische und mentale Muster aufzulösen, Muster, die sich durch schlechte Haltung, Verletzungen, emotionale Traumen, Alltagsstress und schlechte Bewegungsgewohnheiten eingenistet haben.</p>
@@ -22,7 +22,7 @@
     <p>Mit der Trager-Methode sollen individuell auf den Patienten passende Bewegungen, die sich für ihn gut anfühlen, gefunden, eingeübt und im Gedächtnis gespeichert werden, um damit Schmerzen zu lindern. Statt durch Kraftaufwand wie bei einer herkömmlichen Massage, setzt die Trager-Methode darauf, dem Patienten durch leichte Berührung Beweglichkeit zu verschaffen und ein Gefühl tiefer Entspannung zu vermitteln.</p>
   </div>
 
-  <div class="cell">
+  <div id="mentastic" class="cell">
     <h2 class="h2 cell-title">Mentastic</h2>
     <p><q>Bewegungen entstehen aus dem Geist, nicht aus dem Körper.</q>Dr. Milton Trager</p>
     <p>In der Mentastik geht es um die Beziehung zwischen Geist und Körper, genauer zwischen Geist und Bewegung. Aus diesem Verständnis kreierte Trager den Begriff Mentastik: «mentale Gymnasitk».</p>
