--- a/app/views/gutschein/index.phtml
+++ b/app/views/gutschein/index.phtml
@@ -1,3 +1,4 @@
+<?php // TODO: style gutschein page ?>
 <h1>Gutschein</h1>
 <p> Ermöglichen Sie einer geliebten Person, von Innen nach Aussen zu erstrahlen!</p>
 <p>Sei es zu Weihnachten, Valentinstag, Geburtstag, Hochzeitstag oder schlicht als Dankeschön, ein Erlebnisgutschein bei mir passt immer. Denn etwas geschenkt zu bekommen das man sich selbst vielleicht nicht gönnen würde, macht grosse Freude.</p>
