--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,3 +1,4 @@
+<!-- TODO: make these curves mobile friendly -->
 <div class="curves">
   <div class="curve-1">
     <svg id="curve-1" width="100%" height="100%" viewBox="0 0 1920 1080" preserveAspectRatio="none">
@@ -21,41 +22,134 @@
 <div class="three-color-section">
   <div class="showcase">
 
-    <a href="/trager" class="card card-1">
+    <div id="trager-card" class="card">
       <div class="card-front">
         <h1>Trager</h1>
         <hr>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut earum, quo, quasi ipsa fugiat odio amet alias animi, magni ea molestiae quos. Accusamus corporis error placeat beatae cumque sint obcaecati voluptates minima nisi praesentium. Cumque rem non enim dolore, veritatis iste, nihil explicabo ullam repellat aspernatur repellendus, dignissimos quia corporis!</p>
+        <button id="trager-button">Mehr erfahren</button>
       </div>
 
       <div class="card-back">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus. Commodo odio aenean sed adipiscing diam donec adipiscing. Sed tempus urna et pharetra pharetra massa massa ultricies mi. Rhoncus mattis rhoncus urna neque viverra justo nec. At volutpat diam ut venenatis tellus in metus vulputate. Id ornare arcu odio ut sem nulla pharetra. Amet cursus sit amet dictum sit amet justo. Pretium nibh ipsum consequat nisl vel. Amet est placerat in egestas erat imperdiet. Vitae turpis massa sed elementum. A lacus vestibulum sed arcu non odio euismod. Eu ultrices vitae auctor eu augue. Vitae justo eget magna fermentum iaculis eu.</p>
+        <ul>
+          <li><a href="/trager#trager">Trager&reg;</a></li>
+          <li><a href="/trager#mentastic">Mentastic</a></li>
+        </ul>
       </div>
-    </a>
+    </div>
 
-    <a href="/massage" class="card card-2">
+    <div id="massage-card" class="card">
       <div class="card-front">
         <h1>Massage</h1>
         <hr>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum dolore dignissimos odit. Ducimus corporis in dolore corrupti assumenda impedit aliquid saepe nam, omnis, laboriosam quaerat rem incidunt similique ratione deserunt. Ea maiores, provident perferendis accusamus aliquam iure aut ipsum aliquid impedit ratione corporis laboriosam corrupti, sequi id iste quaerat dolor.</p>
+        <button id="massage-button">Mehr erfahren</button>
       </div>
 
       <div class="card-back">
-        <p>Amet volutpat consequat mauris nunc congue nisi vitae suscipit. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque. Aliquet eget sit amet tellus cras adipiscing enim. Blandit volutpat maecenas volutpat blandit aliquam. In pellentesque massa placerat duis. Natoque penatibus et magnis dis parturient montes nascetur ridiculus mus. At varius vel pharetra vel turpis. Leo vel orci porta non. Mattis rhoncus urna neque viverra justo nec. Proin gravida hendrerit lectus a. Pretium quam vulputate dignissim suspendisse. Eu non diam phasellus vestibulum. Velit ut tortor pretium viverra suspendisse. In est ante in nibh mauris cursus mattis molestie.</p>
+        <ul>
+          <li><a href="/massage#klassische-massage">Klassische Massage</a></li>
+          <li><a href="/massage#ruecken-nackenmassage">Rücken- und Nachenmassage</a></li>
+          <li><a href="/massage#schroepfen">Schröpfen</a></li>
+          <li><a href="/massage#schmerz">Schmerztherapie nach Liebscher & Bracht</a></li>
+          <li><a href="/massage#fussreflexzonenmassage">Fussreflexzonenmassage</a></li>
+        </ul>
       </div>
-    </a>
+    </div>
 
-    <a href="/kosmetik" class="card card-3">
+    <div id="kosmetik-card" class="card">
       <div class="card-front">
         <h1>Kosmetik</h1>
         <hr>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, fuga repellat. Atque dolore facere tempore, dolorem quia deleniti neque sapiente illo recusandae quos harum dolores eveniet iure nihil commodi in doloremque quidem praesentium omnis officia ipsam fuga et aliquam. Consectetur alias non maxime repellat facere magnam delectus, sint eum vitae!</p>
+        <button id="kosmetik-button">Mehr erfahren</button>
       </div>
 
       <div class="card-back">
-        <p>Risus quis varius quam quisque id. Dui sapien eget mi proin sed libero enim. Condimentum mattis pellentesque id nibh. Imperdiet nulla malesuada pellentesque elit eget gravida cum sociis natoque. Magna sit amet purus gravida quis blandit turpis. Mauris a diam maecenas sed. Egestas sed tempus urna et pharetra pharetra massa massa ultricies. Viverra nam libero justo laoreet sit amet cursus. At quis risus sed vulputate odio. Nunc mi ipsum faucibus vitae aliquet nec ullamcorper sit amet.</p>
+        <ul>
+          <li><a href="/kosmetik#fusspflege">Fusspflege</a></li>
+          <li><a href="/kosmetik#medizinische-kosmetik">Medizinische Kosmetik</a></li>
+          <li><a href="/kosmetik#aknebehandlung">Aknebehandlung</a></li>
+          <li><a href="/kosmetik#antiaging">AntiAging</a></li>
+          <li><a href="/kosmetik#mikrodermabrasion">Mikrodermabrasion</a></li>
+          <li><a href="/kosmetik#microneedling">Microneedling</a></li>
+          <li><a href="/kosmetik#klassische-kosmetik">Klassische Kosmetik</a></li>
+          <li><a href="/kosmetik#manicure">Manicure</a></li>
+          <li><a href="/kosmeitk#phyto-cell-behandlugn">Phyto-Cell Behandlung</a></li>
+        </ul>
       </div>
-    </a>
+    </div>
+
+    <script>
+      // This little script is responsible for turning the cards
+      const trager_card = document.querySelector("#trager-card")
+      const massage_card = document.querySelector("#massage-card")
+      const kosmetik_card = document.querySelector("#kosmetik-card")
+
+      // If the user clicks outside of the 3 cards all of them get turned back to normal
+      document.querySelector("body").addEventListener("pointerdown", event => {
+        if (!trager_card.contains(event.target))
+        {
+          trager_card.classList.remove("turned")
+        }
+
+        if (!massage_card.contains(event.target))
+        {
+          massage_card.classList.remove("turned")
+        }
+
+        if (!kosmetik_card.contains(event.target))
+        {
+          kosmetik_card.classList.remove("turned")
+        }
+      })
+
+      // Clicking the button on the Trager card turns it over and turns all other cards back to normal
+      document.querySelector("#trager-button").addEventListener("pointerdown", event => {
+        event.preventDefault()
+        event.stopPropagation()
+
+        trager_card.classList.add("turned")
+
+        if (massage_card.classList.contains("turned")) {
+          massage_card.classList.remove("turned")
+        }
+
+        if (kosmetik_card.classList.contains("turned")) {
+          kosmetik_card.classList.remove("turned")
+        }
+      })
+
+      // Clicking the button on the Massage card turns it over and turns all other cards back to normal
+      document.querySelector("#massage-button").addEventListener("pointerdown", event => {
+        event.preventDefault()
+        event.stopPropagation()
+
+        massage_card.classList.add("turned")
+
+        if (trager_card.classList.contains("turned")) {
+          trager_card.classList.remove("turned")
+        }
+
+        if (kosmetik_card.classList.contains("turned")) {
+          kosmetik_card.classList.remove("turned")
+        }
+      })
+
+      // Clicking the button on the Kosmetik card turns it over and turns all other cards back to normal
+      document.querySelector("#kosmetik-button").addEventListener("pointerdown", event => {
+        event.preventDefault()
+        event.stopPropagation()
+
+        kosmetik_card.classList.add("turned")
+
+        if (trager_card.classList.contains("turned")) {
+          trager_card.classList.remove("turned")
+        }
+
+        if (massage_card.classList.contains("turned")) {
+          massage_card.classList.remove("turned")
+        }
+      })
+    </script>
+
   </div>
 </div>
 
