--- a/app/views/massage/index.phtml
+++ b/app/views/massage/index.phtml
@@ -6,19 +6,19 @@
 
 <div class="grid">
 
-  <div class="cell">
+  <div id="klassische-massage" class="cell">
     <h2 class="h2 cell-title">Klassische Massage</h2>
     <p>Bei der klassischen Massage wird die Muskulatur gelockert; Verspannungen und Verklebungen werden gelöst. Die Durchblutung wird erhöht und der Stoffwechsel aktiviert. Schmerzen, die nach körperlicher Arbeit oder Sport auftreten können, werden gelindert. Auch Stress, Angstgefühle oder psychische Unausgeglichenheiten können positiv beeinflusst werden.</p>
     <p>Ein warmer Wickel nach der Massage wirkt sehr entspannend und kann zusätzlich Linderung bringen.</p>
     <p>Jede Massage erhält durch meine individuelle Anwendungsart ihren einzigartigen Ausdruck.</p>
   </div>
 
-  <div class="cell">
+  <div id="ruecken-nackenmassage" class="cell">
     <h2 class="h2 cell-title">Rücken- und Nackenmassage</h2>
     <p>Kreuzschmerzen und Schmerzen im Nacken sind die am häufigsten auftretenden Rückenbeschwerden. Dafür gibt es viele Gründe: Bewegungsarmut, ungesunde Sitzhaltungen bei der Arbeit, lange Autofahrten. Aber auch Kurzsichtigkeit, Einwirkung von Kälte oder Wind können Verspannungen im Nacken zur Folge haben.</p>
     <p>Hier hilft eine gezielte Rücken- und Nackenmassage, um die Verspannungen nachhaltig zu lockern.</p>
+    <h3 class="h3 list-title">Ziele der Rücken- und Nackenmassage</h3>
     <ul class="list">
-      <h3 class="h3 list-title">Ziele der Rücken- und Nackenmassage</h3>
       <li>Linderung von Kopfschmerzen und Migräne</li>
       <li>Entspannung der Rücken- und Nackenmuskulatur</li>
       <li>Vorbeugung von Rücken- und Nackenproblemen</li>
@@ -31,11 +31,11 @@
     </ul>
   </div>
 
-  <div class="cell">
+  <div id="schroepfen" class="cell">
     <h2 class="h2 cell-title">Schröpfen</h2>
     <p>Bei der Schröpfmassage wird das Schröpfglas auf unversehrte Hautstellen gestülpt, die zuvor eingeölt werden. Der Schröpfkopf wird dann über eine bestimmte Stelle verschoben, was eine stärkere durchblutungsfördernde Wirkung hat als die klassische Massage. Dadurch entsteht eine Durchblutungssteigerung und löst im Organismus vorhandene Spannungen auf. Schröpfen ist eine uralte Therapieform.</p>
+    <h3 class="h3 list-title">Ziele des Schröpfens</h3>
     <ul class="list">
-      <h3 class="h3 list-title">Ziele des Schröpfens</h3>
       <li>Aktivierung des Stoffwechsels</li>
       <li>Anregung des Lymphflusses</li>
       <li>Förderung der Durchblutung der Haut</li>
@@ -49,21 +49,21 @@
     <p>Nach dem Schröpfen kann sich die Haut, je nach Verspannungsgrad des Muskels verfärben (Hyperämie: Starke Durchblutung). Diese Verfärbung verblasst in der Regel nach spätestens 7 Tagen.</p>
   </div>
 
-  <div class="cell">
+  <div id="schmerz" class="cell">
     <h2 class="h2 cell-title">Schmerztherapie nach Liebscher & Bracht</h2>
     <p>Ihre Schmerzen sind nicht willkommen? Denken Sie um, denn der Schmerz hat eine sinnvolle Aufgabe und ist deshalb ein wichtiger Mitarbeiter bei der Behebung eines körperlichen Problems. Schmerzen sind unser Alarmsystem, das uns darauf hinweist, wo gerade einen Schaden entstehen kann oder bereits entstanden ist. Hören Sie auf den Schmerz, anstatt ihn mit Medikamenten zu verstummen. Hören Sie dem Körper zu, was er sagen will, denn wenn Sie auf den Schmerz achten, finden Sie die Lösung. Das Ziel der Schmerztherapie ist es, die Ursache der Schmerzen zu finden und die Selbstheilungskräfte des Körpers zu aktivieren. Da die häufigste Schmerzursache überhöhte Spannungen der Muskeln und Faszien sind, kann dies mit einfachen Mitteln behoben werden:
     Dehnen, rollen, drücken.
     Bei der Osteopressur werden spezielle Punkte am Knochen mit drücken stimuliert und zwar dort, wo die Muskeln und Sehnen angesetzt sind. Durch den Druck am Knochen werden bestimmte Areale im Gehirn angesprochen, so dass gespeicherte „Schmerzprogramme“ zurückgesetzt und die muskulär-faszialen Spannungen wieder normalisieren werden können. Mit Rollen können verklebte, verhärtete Faszien wieder weich und geschmeidig gemacht werden. Dehnen hat eine ausgleichende Wirkung und hilft Spannungen abzubauen. Insgesamt wird durch Muskelentspannung, Flexibilisierung der Faszien und der Wiederherstellung der Bewegungsmöglichkeiten der Druck auf die Gelenke gestoppt. Damit werden abgedrückte und eingeklemmte Gefässe und Nerven wieder frei und die Verschleissvorgänge werden aufgehalten. Für diese Therapie sind vertiefte Kenntnisse und Erfahrung von grosser Bedeutung, denn nur wer die körperlichen und funktionellen Zusammenhänge gut versteht, kann die Schmerzen lokalisieren und nachhaltig beseitigen. Die Behandlung wirkt sofort, bis zu 80% der Schmerzen können reduziert werden. Selbstverständlich arbeite ich mit natürlichen Methoden, ohne Schmerzmittel, Spritzen oder operativen Eingriffen.</p>
   </div>
 
-  <div class="cell">
+  <div id="fussreflexzonenmassage" class="cell">
     <h2 class="h2 cell-title">Fussreflexzonenmassage</h2>
     <p>In unseren Füssen befinden sich so genannte Reflexzonen, die alle unsere Körperteile und Organe widerspiegeln. Spezielle Griff- und Drucktechniken auf diese Reflexpunkte mobilisieren körpereigene Selbstheilungskräfte, lösen Blockaden und stimulieren schwache Organ- und Gewebefunktionen.</p>
     <p>Fördert die Gesundheit auf vielfältige Weise und in allen Lebensphasen.</p>
     <p>Entspannt, lindert schmerzen, beugt Krankheiten vor.</p>
     <p>Reduziert den Stress im Nervensystem und ist eine Wohltat für den ganzen Körper.</p>
+    <h3 class="h3 list-title">Bei diesen Beschwerden kann Ihnen eine Reflexzonenmassage helfen</h3>
     <ul class="list">
-      <h3 class="h3 list-title">Bei diesen Beschwerden kann Ihnen eine Reflexzonenmassage helfen</h3>
       <li>Allgemeine Erschöpfung</li>
       <li>Verspannungen</li>
       <li>Menstruations-Beschwerden</li>
@@ -73,8 +73,8 @@
       <li>Magen- und Darmbeschwerden</li>
       <li>Allergien</li>
     </ul>
+    <h3 class="h3 list-title">Eine Reflexzonenmassage löst folgende, heilende Wirkungen aus</h3>
     <ul class="list">
-      <h3 class="h3 list-title">Eine Reflexzonenmassage löst folgende, heilende Wirkungen aus</h3>
       <li>Baut Stress ab</li>
       <li>Stimuliert Lymph- und Blutfluss</li>
       <li>Bekämpft Schmerzen</li>
