--- a/app/views/uebermich/index.phtml
+++ b/app/views/uebermich/index.phtml
@@ -9,3 +9,5 @@
 <p>2019 - Trager Schule Schweiz: Trager Psychophysische Integration, Mentastics Bewegungslehre</p>
 <p>2020 - Trager Schule Schweiz: Trager Weiterbildung Reflex Response</p>
 <p>2020 - Schmerztherapie nach Liebscher & Bracht</p>
+
+<a href="/uebermich/bildergallerie">Bildergallerie</a>
