--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -19,10 +19,15 @@
     <link rel="stylesheet" href="<?= $this->url->get('css/global-styles.css') ?>">
     <link rel="stylesheet" href="<?= $this->url->get('css/navigation.css') ?>">
     <link rel="stylesheet" href="<?= $this->url->get('css/footer.css') ?>">
-    <link rel="stylesheet" href="<?= $this->url->get('css/nerd-fonts.css') ?>">
     <?= $this->assets->outputCss() ?>
   </head>
   <body>
+    <div id="szm-logo">
+      <div>S</div>
+      <div>z</div>
+      <div>M</div>
+    </div>
+
     <?php $this->partial('partials/nav'); ?>
 
     <main id="main">
