--- a/app/views/partials/nav.phtml
+++ b/app/views/partials/nav.phtml
@@ -1,5 +1,17 @@
-<?php // TODO: rework this with JS pointer events ?>
+<div id="menu-icon">
+  <svg width="50px" height="50px" viewBox="0 0 24 24" version="1.2" baseProfile="tiny"><path d="M19 18c.55 0 1 .45 1 1s-.45 1-1 1h-14c-.55 0-1-.45-1-1s.45-1 1-1h14m0-2h-14c-1.654 0-3 1.346-3 3s1.346 3 3 3h14c1.654 0 3-1.346 3-3s-1.346-3-3-3zM19 11c.55 0 1 .45 1 1s-.45 1-1 1h-14c-.55 0-1-.45-1-1s.45-1 1-1h14m0-2h-14c-1.654 0-3 1.346-3 3s1.346 3 3 3h14c1.654 0 3-1.346 3-3s-1.346-3-3-3zM19 4c.55 0 1 .45 1 1s-.45 1-1 1h-14c-.55 0-1-.45-1-1s.45-1 1-1h14m0-2h-14c-1.654 0-3 1.346-3 3s1.346 3 3 3h14c1.654 0 3-1.346 3-3s-1.346-3-3-3z"/></svg>
+</div>
+
 <nav id="nav">
+
+  <div id="close-container">
+    <svg id="close-nav" version="1.1" x="0px" y="0px" width="28px" height="28px" viewBox="0 0 41.756 41.756" style="enable-background:new 0 0 41.756 41.756;" xml:space="preserve">
+      <g>
+        <path d="M27.948,20.878L40.291,8.536c1.953-1.953,1.953-5.119,0-7.071c-1.951-1.952-5.119-1.952-7.07,0L20.878,13.809L8.535,1.465 c-1.951-1.952-5.119-1.952-7.07,0c-1.953,1.953-1.953,5.119,0,7.071l12.342,12.342L1.465,33.22c-1.953,1.953-1.953,5.119,0,7.071 C2.44,41.268,3.721,41.755,5,41.755c1.278,0,2.56-0.487,3.535-1.464l12.343-12.342l12.343,12.343 c0.976,0.977,2.256,1.464,3.535,1.464s2.56-0.487,3.535-1.464c1.953-1.953,1.953-5.119,0-7.071L27.948,20.878z"/>
+      </g>
+    </svg>
+  </div>
+
   <ul>
     <li>
       <a href="/" id="home-link" class="<?= $this->view->page == 0 ? "current-page" : "" ?>">
@@ -72,10 +84,9 @@
 
     <li>
       <a href="/uebermich" class="<?= $this->view->page == 4 ? "current-page" : "" ?>">
-      <?php // TODO: this SVG needs fixing ?>
         <svg width="28" height="28" viewBox="0 0 24 24">
-          <circle cx="12" cy="7" r="5" stroke="black" stroke-width="2"/>
-          <path d="M17 14H17.3517C18.8646 14 20.1408 15.1266 20.3285 16.6279L20.719 19.7519C20.8682 20.9456 19.9374 22 18.7344 22H5.26556C4.06257 22 3.1318 20.9456 3.28101 19.7519L3.67151 16.6279C3.85917 15.1266 5.13538 14 6.64835 14H7" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <circle cx="12" cy="7" r="5" stroke="#000000" fill="#00000000" stroke-width="2"/>
+          <path d="M17 14H17.3517C18.8646 14 20.1408 15.1266 20.3285 16.6279L20.719 19.7519C20.8682 20.9456 19.9374 22 18.7344 22H5.26556C4.06257 22 3.1318 20.9456 3.28101 19.7519L3.67151 16.6279C3.85917 15.1266 5.13538 14 6.64835 14H7" stroke="#000000" fill="#00000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
         Über&nbsp;mich
       </a>
@@ -127,3 +138,34 @@
     </li>
   </ul>
 </nav>
+
+<script>
+  // This little script makes the nav appear/disappear
+  const nav = document.querySelector("#nav")
+
+  // Opens the menu when clicking the menu icon
+  document.querySelector("#menu-icon").addEventListener("pointerdown", event => {
+    event.preventDefault()
+    event.stopPropagation()
+
+    nav.classList.add("open")
+  })
+
+  // Closes the menu when clicking the X
+  document.querySelector("#close-nav").addEventListener("pointerdown", event => {
+    event.preventDefault()
+    event.stopPropagation()
+
+    nav.classList.remove("open")
+  })
+
+  // Closes the menu when clicking outside the menu
+  document.querySelector("body").addEventListener("pointerdown", event => {
+    event.preventDefault()
+    event.stopPropagation()
+
+    if (!nav.contains(event.target)) {
+      nav.classList.remove("open")
+    }
+  })
+</script>
