--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -9,11 +9,11 @@
   display: flex;
   justify-content: space-evenly;
   /*gap: 3rem;*/
-  padding: 2rem 6rem;
+  padding: 2em 6em;
 }
 
 #footer * {
-  font-size: 1.125em;
+  font-size: 1.25rem;
   font-style: normal;
   color: var(--light-text-color);
 }
@@ -30,5 +30,5 @@
 }
 
 #footer h2 {
-  font-size: 1.4em;
+  font-size: 1.6rem;
 }
