--- a/public/css/index-showcase.css
+++ b/public/css/index-showcase.css
@@ -1,10 +1,10 @@
 .three-color-section {
-  --gap: 55px;
-  height: 700px;
+  --gap: 3.4375em;
+  height: 43.75em;
   display: flex;
   align-items: stretch;
   justify-content: center;
-  padding: 80px var(--gap) 0px var(--gap);
+  padding: 5em var(--gap) 0em var(--gap);
   background-image:
     linear-gradient(
       to right,
@@ -26,7 +26,7 @@
 .card {
   position: relative;
   width: calc(100% / 3);
-  padding: 0 40px;
+  padding: 0em 2.5em;
   transform-style: preserve-3d;
 }
 
@@ -42,9 +42,9 @@
 }
 
 .card-front {
-  border-radius: 60px;
+  border-radius: 3.75em;
   transform: rotateY(0deg);
-  padding: 40px 60px 60px 60px;
+  padding: 2.5em 3.75em 3.75em 3.75em;
 }
 
 .card-back {
@@ -58,15 +58,16 @@
 }
 
 .card .card-front button {
-  font: 1.5em "Quicksand", sans-serif;
+  font: 1.5rem "Quicksand", sans-serif;
   margin: 100% auto 0 auto;
-  padding: 0.5rem 1rem;
-  border-radius: 50px;
+  padding: 0.5em 1em;
+  border-radius: 3.125em;
   background-color: var(--dark-text-color);
   color: var(--light-text-color);
   border: none;
   transform: translateZ(100px);
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .card .card-back ul {
@@ -83,7 +84,7 @@
 
 .card .card-back li {
   list-style-type: none;
-  border-radius: 50px;
+  border-radius: 3.125em;
 }
 
 .card .card-back a {
@@ -120,8 +121,8 @@
 .card .card-front::before {
   content: '';
   position: absolute;
-  inset: 20px;
-  border-radius: 40px;
+  inset: 1.25em;
+  border-radius: 2.5em;
   background-color: var(--bg-color);
   transform: translateZ(50px);
 }
