--- a/public/css/trager-index.css
+++ b/public/css/trager-index.css
@@ -5,8 +5,8 @@ b, i {
 .flex {
   display: flex;
   background-color: var(--trager-color);
-  gap: 1.875rem;
-  padding: 1.875rem;
+  gap: 1.875em;
+  padding: 1.875em;
   color: var(--light-text-color);
 }
 
