--- a/app/views/termin/index.phtml
+++ b/app/views/termin/index.phtml
@@ -1,2 +1,6 @@
 <?php // TODO: find good date picker and implement this using AJAX and a DB ?>
 <h1>Termin buchen</h1>
+
+<p><?= $this->view->kategorie ?></p>
+
+<p><?= $this->view->behandlung ?></p>
